V1.1.9 Saturday, July 5, 2014
 +Fixed bug 120, position_history broken. We limit x & y with screen limit -100.
 +Fixed bug 124, Enter does not select entry.
 
V1.1.8 Thursday, July 3, 2014
 +Fixed bug 107, segfault when action key missing in parcelliterc.
 +Fixed bug 108, red search-as-you-type with super-K key.
 +Fixed bug 109, segfault when action key missing and history key changed.
 +Updated Russian translation.
 +Fix broken case-sensitive search.
 +Fixed bug 111, unlock a mutext not locked. 
 +Fixed history editing problem issue where history is updated while editing.
 +Added emphatic statement about xdotool on the autopaste tooltip.
 +Added pref_mapper that maps prefs to integer values so we don't have to string compares
  in main loop. Should decrease CPU cycles considerably in the ticker.
 +Added ability to use system-wide XDG config file on first startup.
 +Added dialog popup if auto-paste is checked and xdotool does not exist.
 +Added item_limit (which is the same thing as data_size) which limits per-item size.
 +Fixed syncronization bug when trim whitespace was selected and proccessed entry was already in history.
 +Fix of bug in write_fifo.
 +Fix item and data size to correct scaling, and change to KB for better granularity.
 +Fix bug 121, context menu stays up after history menu is deactivated.
 +Fix new bug with memory leak by destroying history menu every time, related to bug 121.
 +Fix minor bug where edit shows up on right-click even when user disabled it.
 +Fix bug where right-click-ctrl/shift did not delete history entries.
 
V1.1.7 Tuesday, October 15, 2013
 +Added remote i386 build and upload to sourceforge.
 +Fixed bug 100, pot doesn't contain <b> entries
 +Updated French translation.
 +Fixed duplicate empty string which causes errors in translations.
 +Final fix for bug 81.
 +Fix Duplicate Edit box when editing keyboard history entries (reported in bug 103 as sidenote).